<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.centralcinema.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35">
            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoStart="true"
                android:flipInterval="2000">
                <ImageView
                    android:src="@drawable/cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:src="@drawable/cover1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:src="@drawable/cover2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:src="@drawable/cover3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

            </ViewFlipper>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout
            android:background="#11000000"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075">
            <ImageButton
                android:id="@+id/infoButton"
                android:background="#70FFFFFF"
                android:tag="1"
                style="@style/MenuButton"
                android:src="@drawable/info"
                android:onClick="changeContent"/>
            <ImageButton
                android:id="@+id/scheduleButton"
                android:tag="2"
                style="@style/MenuButton"
                android:src="@drawable/alarm"
                android:onClick="changeContent"/>
            <!--<ImageButton
                style="@style/MenuButton"
                android:src="@drawable/location"/>-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoContent"
            android:layout_width="match_parent"
            android:background="#10000000"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="0.525">
            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/info"
                        style="@style/IntroText"/>
                    <TextView
                        style="@style/InfoCategory"
                        android:text="Location"/>
                    <TextView
                        style="@style/InfoText"
                        android:text="@string/location"
                        android:drawableLeft="@drawable/locm"
                        android:drawablePadding="16dp"                        />
                    <TextView
                        style="@style/InfoCategory"
                        android:text="Contact"/>
                    <TextView
                        style="@style/InfoText"
                        android:text="@string/phone_number1"
                        android:drawableLeft="@drawable/callm"
                        android:drawablePadding="16dp"/>
                    <TextView
                        style="@style/InfoText"
                        android:text="@string/phone_number2"
                        android:drawableLeft="@drawable/callm"
                        android:drawablePadding="16dp"/>
                    <TextView
                        style="@style/InfoText"
                        android:text="@string/email"
                        android:drawableLeft="@drawable/mail"
                        android:drawablePadding="16dp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/scheduleContent"
            android:background="#10000000"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.525"
            android:orientation="vertical"
            android:visibility="gone">
            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/day135"
                        style="@style/ScheduleCategory" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord1"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie1"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord2"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie2"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord3"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie3"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord4"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie4"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord5"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie5"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <TextView
                        android:text="@string/day2467"
                        style="@style/ScheduleCategory"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord1"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie6"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord2"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie7"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord3"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie8"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord4"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie9"
                            style="@style/InfoText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/ord5"
                            style="@style/InfoText"
                            android:layout_width="wrap_content"/>
                        <TextView
                            android:text="@string/movie10"
                            style="@style/InfoText"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
